feat: add nginx reverse proxy

--- a/src/second.html
+++ b/src/second.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1><code>index.html</code></h1>
-    <h3>Current Route: <code>/</code></h3>
-    <a href="/another">Go to another page</a>
+    <h1><code>second.html</code></h1>
+    <h3>Current Route: <code>/another</code></h3>
+    <a href="/">Go to index page</a>
 </body>
 
 </html>
