feat: add proxy server

--- a/src/second.html
+++ b/src/second.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1><code>second.html</code></h1>
-    <h3>Current Route: <code>/another</code></h3>
+    <h3>Current Route: <code>/second</code></h3>
     <a href="/">Go to index page</a>
 </body>
 
