--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1><code>index.html</code></h1>
     <h3>Current Route: <code>/</code></h3>
-    <a href="/another">Go to another page</a>
+    <a href="/second">Go to second page</a>
 </body>
 
 </html>
