fix: add file served label

--- a/src/second.html
+++ b/src/second.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1><code>second.html</code></h1>
-    <h3>Current Route: <code>/second</code></h3>
+    <h2>File served: <code>second.html</code></h2>
+    <h2>Current route: <code>/second</code></h2>
     <a href="/">Go to index page</a>
 </body>
 
