--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1><code>index.html</code></h1>
-    <h3>Current Route: <code>/</code></h3>
+    <h2>File served: <code>index.html</code></h2>
+    <h2>Current route: <code>/</code></h2>
     <a href="/second">Go to second page</a>
 </body>
 
